# sdl-mod

./: CMakeLists.txt  LICENSE.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
cmake/: sdl-add-colorspace-hint.patch
src/: base.h  bind.h  bind.hpp  events.cpp  events.h  hooks.cpp  input.cpp  keymap.cpp  keymap.h  main.mm  objc.h  objc.mm  platform.h
